# NIKON_SLM

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/: lpbf_titanium_dataset.csv
scripts/: compare_models.py  evaluate.py  generate_modeling_report.py  inspect_feature_sets.py  production_smoke_test.py  run_eda.py  run_modeling_plots.py  serve_api.py  train.py
src/lpbf_quality/api/: main.py
src/lpbf_quality/config/: settings.py
src/lpbf_quality/data/: challenge_analysis.py  load_data.py  quality_gates.py  statistical_validation.py  validate_data.py
src/lpbf_quality/evaluation/: metrics.py
src/lpbf_quality/features/: build_features.py  feature_sets.py
src/lpbf_quality/models/: model_registry.py  model_selection.py  selection_policy.py  training.py
src/lpbf_quality/utils/: logging.py
src/lpbf_quality/visualization/: business_plots.py  eda_plots.py  modeling_plots.py
src/lpbf_quality_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_challenge_analysis_contract.py  test_data_quality_contract.py  test_eda_cli_smoke.py  test_model_registry_and_selection.py  test_task2_modeling_contract.py  test_task3_api_contract.py
